--- a/templates/home/homeTemplate.html
+++ b/templates/home/homeTemplate.html
@@ -5,6 +5,9 @@
 <!-- fim menu -->
   <div id="page" class="left">
     <header id="pageHeader" class="top">
+      <div id="pageMessage" class="left">
+
+      </div>
       <ul class="left topButtons">
         <li><a id="menuButton" href="#" class="menu">Menu</a></li>
       </ul> 
