--- a/templates/chat/chatWindowMessagesTemplate.html
+++ b/templates/chat/chatWindowMessagesTemplate.html
@@ -1,6 +1,9 @@
 <% _.each(messages, function(message){ %>
   <% var lastMsgJID = ''; %>
 	<% if (message.jid != "me") { %>
+    <div class="fullWidth" style="text-align: left; font-size: 10px; color: #777777; margin-bottom: 10px; padding-left: 20px;">
+      <%=moment(message.date).format("hh:mm")%> - (<%=moment(message.date).fromNow()%>)
+    </div>
 		<div class="fullWidth">
   		<img class="chat-picture left">
   		<div class="triangle-right left">
@@ -9,6 +12,9 @@
   		<div class="clear"></div>
   	</div>
 	<% } else { %>
+    <div class="fullWidth" style="text-align: right; font-size: 10px; color: #777777; margin-bottom: 10px; padding-right: 20px;">
+      <%=moment(message.date).format("hh:mm")%> - (<%=moment(message.date).fromNow()%>)
+    </div>
   	<div class="fullWidth">
   		<img class="myPicture chat-picture right">
   		<div class="triangle-right right">
