Implementação Inicial da preferência Resultados Por Página.

--- a/templates/settings/settingsAboutListTemplate.html
+++ b/templates/settings/settingsAboutListTemplate.html
@@ -3,6 +3,10 @@
 	<div id="scrollerDetail">
 
 		<dl id="aboutExpresso">
+
+			<div class="login-center" style="width: 245px; margin-top: 50px; margin-bottom: 50px;">
+			      <div class="product-logo"></div>
+			</div>
 			
 			<dt>O que é</dt>
 			<dd>O Expresso Livre é uma solução completa de comunicação que reúne Email, Agenda, Catálogo de Endereços, Workflow e Mensagens Instantâneas em um único ambiente. Por ser uma versão customizada do E-GroupWare, seu desenvolvimento também é totalmente baseado em software livre.</dd>
@@ -24,9 +28,9 @@
 			<dt>Versões</dt>
 			<dd>
 				<ul>
-					<li>Versão da Aplicação <%=appVersion%></li>
-					<li>Versão do Expresso <%=expressoVersion%></li>
-					<li>Versão da API <%=apiVersion%></li>
+					<li>Versão da Aplicação: <b><%=appVersion%></b></li>
+					<li>Versão do Expresso: <b><%=expressoVersion%></b></li>
+					<li>Versão da API: <b><%=apiVersion%></b></li>
 				</ul>
 			</dd>
 				
