--- a/templates/settings/settingsListTemplate.html
+++ b/templates/settings/settingsListTemplate.html
@@ -8,27 +8,27 @@
 				<ul>
 					<li>projetomobile@celepar.pr.gov.br</li>
 					<li>Login automático <input type="checkbox" class="check" /></li>
-					<li><a href="/Settings/ChangePassword" class="menuLink">Alterar senha</a></li>
+					<li><a href="/Settings/ChangePassword" class="settinsLink">Alterar senha</a></li>
 				</ul>
 			</dd>
 			<dt>Outras configurações</dt>
 			<dd>
 				<ul>
-					<li><a href="/Settings/ResultsPerPage" class="menuLink">Resultados por página</a></li>
+					<li><a href="/Settings/ResultsPerPage" class="settinsLink">Resultados por página</a></li>
 				</ul>
 			</dd>
 			<dt>Escrever mensagens</dt>
 			<dd>
 				<ul>
-					<li><a href="/Settings/MailSignature" class="menuLink">Assinatura de e-mail</a></li>
+					<li><a href="/Settings/MailSignature" class="settinsLink">Assinatura de e-mail</a></li>
 				</ul>
 			</dd>
 			<dt>Expresso</dt>
 			<dd>
 				<ul>
-					<li><a href="/Settings/Support" class="menuLink">Suporte / Sugestões</a></li>
-					<li><a href="/Settings/About" class="menuLink">Sobre o Expresso</a></li>
-					<li><a href="/Settings/Credits" class="menuLink">Créditos</a></li>
+					<li><a href="/Settings/Support" class="settinsLink">Suporte / Sugestões</a></li>
+					<li><a href="/Settings/About" class="settinsLink">Sobre o Expresso</a></li>
+					<li><a href="/Settings/Credits" class="settinsLink">Créditos</a></li>
 				</ul>
 			</dd>
 		</dl>
