--- a/templates/settings/settingsMailSignatureListTemplate.html
+++ b/templates/settings/settingsMailSignatureListTemplate.html
@@ -1,14 +1,12 @@
 <h2 class="ellipsis50">Assinatura do Email</h2>
 <article id="wrapperDetail" class="container">
 	<div id="scrollerDetail">
-
-		<form id="emailSignature">
+		<div id="emailSignature">
 			<ol>
 				<li>
-					<textarea name="assinaturaEmail" id="assinaturaEmail" placeholder="Mensagem enviada de um dispositvo móvel."></textarea>
+					<textarea name="assinaturaEmail" id="assinaturaEmail" placeholder="Mensagem enviada pelo Expresso Mobile."><%=mailsignature%></textarea>
 				</li>
 			</ol>
-		</form>
-		
+		</div>
   	</div>
 </article>
