--- a/templates/master/detailContentTemplate.html
+++ b/templates/master/detailContentTemplate.html
@@ -1,5 +1,9 @@
 <h2 id="contentDetailTitle" class="ellipsis50"></h2>
 
+<div class="searchArea">
+	<input type="text" class="searchField" value="" placeholder="Procurar Por:" />
+</div>
+
 <div id="wrapperDetail" class="container">
 	<div id="scrollerDetail"></div>
 </div>
