Correção e melhorias da tela de Sobre o Expresso e Créditos.

--- a/templates/settings/settingsAboutListTemplate.html
+++ b/templates/settings/settingsAboutListTemplate.html
@@ -30,7 +30,7 @@
 				<ul>
 					<li>Versão da Aplicação: <b><%=appVersion%></b></li>
 					<li>Versão do Expresso: <b><%=expressoVersion%></b></li>
-					<li>Versão da API: <b><%=apiVersion%></b></li>
+					<li>Versão da API: <b><%=apiVersion%></b><br><br><br><br><br></li>
 				</ul>
 			</dd>
 				
