--- a/templates/settings/settingsCreditsListTemplate.html
+++ b/templates/settings/settingsCreditsListTemplate.html
@@ -21,10 +21,12 @@
 			<dt>Desenvolvedores API</dt>
 			<dd>
 				<ul>
-					<li>Nilton Emilio Buhrer Neto</li>
-					<li>Jair Gonçalves Pereira Jr</li>
 					<li>Alexandre Luiz Correia</li>
+					<li>Alexandre Rocha Wendling</li>
 					<li>Anderson Tadayuki Saikawa</li>
+					<li>Jair Gonçalves Pereira Jr</li>
+					<li>Nilton Emilio Buhrer Neto</li>
+					<li>Rafael Katayama Gobara</li>			
 				</ul>
 			</dd>
 
@@ -35,6 +37,7 @@
 					<li>RequireJS</li>
 					<li>Underscore</li>
 					<li>jQuery</li>
+					<li>Moment.js</li>
 					<li>PhoneGap</li>
 					<li>iScroll</li>
 					<li>jQuery Dot Dot Dot</li>
