Correção de BUG das mensagens de Erro.

--- a/templates/login/loginTemplate.html
+++ b/templates/login/loginTemplate.html
@@ -1,3 +1,4 @@
+<div id="pageMessage"></div>
 <div class="login-center" style="width: 245px; margin-top: 0px;">
       <div class="product-logo"></div>
 </div>
