--- a/templates/home/homeTemplate.html
+++ b/templates/home/homeTemplate.html
@@ -5,9 +5,7 @@
 <!-- fim menu -->
   <div id="page" class="left">
     <header id="pageHeader" class="top">
-      <div id="pageMessage" class="left">
-
-      </div>
+      <div id="pageMessage"></div>
       <ul class="left topButtons">
         <li><a id="menuButton" href="#" class="menu">Menu</a></li>
       </ul> 
