--- a/templates/calendar/calendarEditEventTemplate.html
+++ b/templates/calendar/calendarEditEventTemplate.html
@@ -1,7 +1,7 @@
 <form id="addEvent">
 	<ol>
 		<li>
-			<label for="eventType">Tipo</label>
+			<label for="eventType">Tipo *</label>
 			<select name="eventType" id="eventType">
 
 				<% _.each(types, function(t, i) { %>
@@ -13,7 +13,7 @@
 			</select>
 		</li>
 		<li>
-			<label for="eventName">Título</label>
+			<label for="eventName">Título *</label>
 			<input type="text" name="eventName" id="eventName" placeholder="Título" value="<%= event.get('eventName') %>" />
 		</li>
 		<li>
@@ -45,43 +45,51 @@
 			<input type="text" name="eventLocation" id="eventLocation" placeholder="Localização" value="<%= event.get('eventLocation') %>" />
 		</li>
 		<li class="date">
-			<label for="eventDateStart">Data inicial</label>
+			<label for="eventDateStart">Data inicial *</label>
 			<input type="date" name="eventDateStart" id="eventDateStart" placeholder="Data inicial" value="<%= event.get('eventDateStart') %>" />
 		</li>
 		<li class="date">
-			<label for="eventTimeStart">Hora inicial</label>
+			<label for="eventTimeStart">Hora inicial *</label>
 			<input type="time" name="eventTimeStart" id="eventTimeStart" placeholder="Hora inicial" value="<%= event.get('eventTimeStart') %>" />
 		</li>
 		<li class="date">
-			<label for="eventDateEnd">Data final</label>
+			<label for="eventDateEnd">Data final *</label>
 			<input type="date" name="eventDateEnd" id="eventDateEnd" placeholder="Data final" value="<%= event.get('eventDateEnd') %>" />
 		</li>
 		<li class="date">
-			<label for="eventTimeEnd">Hora final</label>
+			<label for="eventTimeEnd">Hora final *</label>
 			<input type="time" name="eventTimeEnd" id="eventTimeEnd" placeholder="Hora final" value="<%= event.get('eventTimeEnd') %>" />
 		</li>
 		<li class="participants">
 			<!-- <h4>Participantes:</h4> -->
 			<label for="participantes">Participantes</label>
 			<a href="#" id="addParticipants" title="Adicionar participantes">Adicionar participantes</a>
-			<!-- <ol>
-				<li>
-					<input id="participante_1" type="checkbox" class="css-checkbox" name="participantes[]" value="1" checked="checked" /> 
-					<label for="participante_1" class="css-label">Alaor</label>
-				</li>
-				<li>
-					<input id="participante_2" type="checkbox" class="css-checkbox" name="participantes[]" value="2" checked="checked" /> 
-					<label for="participante_2" class="css-label">Bastiao</label>
-				</li>
-				<li>
-					<input id="participante_3" type="checkbox" class="css-checkbox" name="participantes[]" value="3" checked="checked" /> 
-					<label for="participante_3" class="css-label">Estevao</label>
-				</li>
-				<li>
-					<input id="participante_4" type="checkbox" class="css-checkbox" name="participantes[]" value="4" checked="checked" /> 
-					<label for="participante_4" class="css-label">Doroteia</label>
-				</li>
-			</ol> -->
+
+			<% 
+			var listParticipants = event.get('eventParticipants');
+
+			console.log(listParticipants);
+
+			if (typeof(listParticipants) != 'undefined' && listParticipants.length > 0) 
+			{ 
+			%>
+				<ol>
+
+					<% _.each(listParticipants, function(participant) { 
+
+						var uid = (participant).split("@")[0]; 
+					%>
+
+						<li>
+							<input id="<%= uid %>" type="checkbox" class="css-checkbox" name="<%= uid %>" value="<%= participant %>" checked="checked" /> 
+							<label for="<%= uid %>" class="css-label"><%= participant %></label>
+						</li>
+
+					<% }); %>
+
+				</ol>
+
+			<% } %>
 		</li>
 		<li>
 			<label for="eventPriority">Prioridade</label>
